# Gloomberg

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md  pyproject.toml
.claude/: settings.local.json
data_pipeline/: __init__.py  daily_refresh.py  index_rebalance.py  quarterly_filings.py
db/: schema.sql
docs/plans/: 2026-03-08-scaffold-design.md  2026-03-08-scaffold-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/hooks/: useEstimates.ts  useFundamentals.ts  useIndex.ts  useMarketData.ts  useScreener.ts  useShareholding.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
gateway/: __init__.py  config.py  main.py  middleware.py
services/: __init__.py
services/estimates/: __init__.py  consensus_builder.py  router.py
services/estimates/providers/: __init__.py  base.py  finnhub.py  fmp.py
services/fundamentals/: __init__.py  normalizer.py  router.py
services/fundamentals/providers/: __init__.py  base.py  bse_filings.py  sec_edgar.py
services/index/: __init__.py  router.py
services/index/providers/: __init__.py  base.py  nse_index.py  yahoo_index.py
services/market_data/: __init__.py  cache.py  router.py
services/market_data/providers/: __init__.py  base.py  bse.py  kite.py  yahoo.py
services/models/: __init__.py  estimates.py  fundamentals.py  index.py  market.py  shareholding.py
services/screener/: __init__.py  engine.py  router.py
services/shareholding/: __init__.py  router.py
services/shareholding/providers/: __init__.py  base.py  bse_shareholding.py
tests/: __init__.py  conftest.py
tests/gateway/: test_main.py
tests/services/estimates/: __init__.py  test_router.py
tests/services/fundamentals/: __init__.py  test_router.py
tests/services/index/: __init__.py  test_router.py
(+40 files in other folders)
